--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,32 @@
-apply plugin: 'war'
+buildscript {
+	ext {
+		springBootVersion = '1.5.2.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
+}
+
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
+
 
 dependencies {
-    compile "org.springframework:spring-webmvc:4.3.6.RELEASE"
-    compile "org.springframework:spring-jdbc:4.3.6.RELEASE"
-    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.5'
-    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.7'
-// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.7'
-
-    compile "javax.servlet:jstl:1.2"
-    providedCompile "javax.servlet:javax.servlet-api:3.1.0"
-    providedCompile "javax.servlet.jsp:jsp-api:2.0"
-    providedCompile "javax.el:javax.el-api:3.0.0"
-}
-
-
-war {
-    baseName = 'prediction'
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-jdbc')
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile ('mysql:mysql-connector-java')
+    //compile('org.apache.tomcat.embed:tomcat-embed-jasper')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
